--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/adapter-nextjs": "^1.6.8",
     "@heroicons/react": "^2.1.3",
     "@tailwindcss/forms": "^0.5.7",
+    "aws-amplify": "^6.15.5",
     "clsx": "^2.1.0",
     "next": "14.1.4",
     "react": "^18",
